finally fix the looping, *curchain is OK to start but then we should switch to *current